--- a/IronUp/app/src/main/res/layout/main.xml
+++ b/IronUp/app/src/main/res/layout/main.xml
@@ -5,11 +5,23 @@
     android:layout_width="match_parent"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/sliderButton"
             android:text="slider"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/notificationsButton"
+            android:text="notifications"/>
+    </LinearLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,10 +34,6 @@
             android:orientation="vertical"
             android:id="@+id/leftToolbarLayoutID"
             android:background="#1AC000">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="text"/>
             </LinearLayout>
 
             <LinearLayout
