--- a/IronUp/app/src/main/res/layout/gyms_menu.xml
+++ b/IronUp/app/src/main/res/layout/gyms_menu.xml
@@ -9,7 +9,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/gymListLayoutID">
+            android:id="@+id/gymListLayoutID"
+            android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
