--- a/IronUp/app/src/main/res/values/styles.xml
+++ b/IronUp/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="entryView" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:scaleType">centerCrop</item>
+        <item name="android:layout_marginLeft">22dp</item>
+        <item name="android:layout_marginRight">22dp</item>
+    </style>
+
 </resources>
