--- a/IronUp/app/src/main/res/layout/entry_menu.xml
+++ b/IronUp/app/src/main/res/layout/entry_menu.xml
@@ -28,7 +28,7 @@
             android:text="Email:"
             android:textSize="24sp"
             android:fontFamily="sans-serif-medium"
-            android:textColor="#FAFAFA"
+            android:textColor="#000000"
             android:id="@+id/emailTextView" />
 
         <EditText
@@ -47,7 +47,7 @@
             android:text="Password:"
             android:textSize="24sp"
             android:fontFamily="sans-serif-medium"
-            android:textColor="#FAFAFA"
+            android:textColor="#000000"
             android:id="@+id/textView2" />
 
         <EditText
@@ -64,7 +64,7 @@
             android:text="Enter"
             android:textSize="24sp"
             android:fontFamily="sans-serif-medium"
-            android:textColor="#FAFAFA"
+            android:textColor="#000000"
             android:id="@+id/enterButton"
             android:background="@android:color/transparent"
             android:layout_gravity="center_horizontal" />
