--- a/IronUp/app/src/main/res/layout/main.xml
+++ b/IronUp/app/src/main/res/layout/main.xml
@@ -8,17 +8,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#9E9E9E">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/sliderButton"
-            android:text="slider"/>
+            android:background="@drawable/sliderpicture"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/notificationsButton"
-            android:text="notifications"/>
+            android:background="@drawable/notificationpicture_no_notification"/>
     </LinearLayout>
 
 
@@ -26,14 +27,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#FAFAFA">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:id="@+id/leftToolbarLayoutID"
-            android:background="#1AC000">
+            android:background="#BDBDBD">
             </LinearLayout>
 
             <LinearLayout
@@ -41,7 +43,7 @@
                 android:layout_height="match_parent"
                 android:id = "@+id/contentMenusID"
                 android:orientation="vertical"
-                android:background="#FF0000">
+                android:background="#FAFAFA">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
