--- a/IronUp/app/src/main/res/layout/news_menu.xml
+++ b/IronUp/app/src/main/res/layout/news_menu.xml
@@ -14,23 +14,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Bench press championship up to 75 kg this Tuesday"
-                android:background="#2ACA00"
+                android:background="#AABDBD"
                 android:textSize="20sp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Bench press championship up to 75 kg this Tuesday"
-                android:background="#2ACA00"
+                android:text=""
+                android:background="#AABDBD"
                 android:textSize="20sp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Text33 333333 33333  3333333 333333333333333333 3333333333333333"
-                android:background="#2ACA00"
+                android:text="TestNews"
+                android:background="#AABDBD"
                 android:textSize="20sp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"/>
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Text34 444 44444444444 444444"
-                android:background="#2ACA00"
+                android:background="#AABDBD"
                 android:textSize="20sp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"/>
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Text12 3123 3 asd as asd as"
-                android:background="#2ACA00"
+                android:background="#AABDBD"
                 android:textSize="20sp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"/>
@@ -54,15 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Tex t1asd 2 3123 3 asd as asd as"
-                android:background="#2ACA00"
-                android:textSize="20sp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Tex asf t12 3123 3 asasdd as asd as"
-                android:background="#2ACA00"
+                android:background="#AABDBD"
                 android:textSize="20sp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"/>
