--- a/IronUp/app/src/main/res/layout/news_menu.xml
+++ b/IronUp/app/src/main/res/layout/news_menu.xml
@@ -21,11 +21,16 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/gym1"></TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:text=""
                 android:background="#AABDBD"
                 android:textSize="20sp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"/>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
