statistics menu, design update

--- a/IronUp/app/src/main/res/drawable/sliderpicture.xml
+++ b/IronUp/app/src/main/res/drawable/sliderpicture.xml
@@ -4,5 +4,5 @@
         android:drawable="@drawable/sliderpushed"
         android:state_pressed="true"></item>
     <item
-        android:drawable="@drawable/sliderpushed"></item>
+        android:drawable="@drawable/slider"></item>
 </selector>
