--- a/IronUp/app/src/main/res/values/styles.xml
+++ b/IronUp/app/src/main/res/values/styles.xml
@@ -14,4 +14,31 @@
         <item name="android:layout_marginRight">22dp</item>
     </style>
 
+    <style name="linearLayout" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:background">#EEEEEE</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingTop">6dp</item>
+        <item name="android:paddingBottom">6dp</item>
+        <item name="android:layout_marginTop">6dp</item>
+    </style>
+
+    <style name="button" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:background">#F5F5F5</item>
+        <item name="android:textColor">#424242</item>
+        <item name="android:textSize">22dp</item>
+    </style>
+
+    <style name="header" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:textColor">#424242</item>
+        <item name="android:textSize">26dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingTop">6dp</item>
+    </style>
+
+    <style name="text" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:textColor">#616161</item>
+        <item name="android:textSize">22dp</item>
+        <item name="android:layout_marginLeft">6dp</item>
+    </style>
+
 </resources>
