--- a/IronUp/app/src/main/res/layout/choice_exercise_layout.xml
+++ b/IronUp/app/src/main/res/layout/choice_exercise_layout.xml
@@ -12,7 +12,8 @@
         android:textSize="22sp"
         android:layout_marginTop="4dp"
         android:layout_marginLeft="6dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:inputType="number"/>
 
     <TextView
         android:layout_width="match_parent"
