--- a/IronUp/app/src/main/res/layout/lefttoolbar.xml
+++ b/IronUp/app/src/main/res/layout/lefttoolbar.xml
@@ -2,16 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/logo"/>
+        android:layout_height="130dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="#EEEEEE"
+        android:scaleType="fitCenter"
+        android:src="@drawable/logo"
+        />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/newsFeedButtonID"
         android:text="  News"
+        android:gravity="left|center"
         android:textColor="#FAFAFA"
         android:layout_marginLeft = "0dp"
         android:textSize="20sp"
@@ -20,6 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/statisticsButtonID"
+        android:gravity="left|center"
         android:text="  Statistics"
         android:textColor="#FAFAFA"
         android:textSize="20sp"
@@ -28,6 +35,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="left|center"
         android:id="@+id/gymListButtonID"
         android:text="  GymList"
         android:textColor="#FAFAFA"
@@ -38,6 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/trainButtonID"
+        android:gravity="left|center"
         android:textColor="#FAFAFA"
         android:textSize="20sp"
         android:text="  train"
