restyle notification bar

--- a/IronUp/app/src/main/res/layout/main.xml
+++ b/IronUp/app/src/main/res/layout/main.xml
@@ -9,15 +9,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#424242">
+        android:background="#CFD8DC">
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="1dp"
             android:id="@+id/sliderButton"
+            android:layout_marginLeft="4dp"
             android:background="@drawable/sliderpicture"/>
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="1dp"
             android:id="@+id/notificationsButton"
             android:background="@drawable/notificationpicture_no_notification"/>
     </LinearLayout>
