--- a/IronUp/app/src/main/res/layout/lefttoolbar.xml
+++ b/IronUp/app/src/main/res/layout/lefttoolbar.xml
@@ -22,7 +22,7 @@
         android:textColor="#FAFAFA"
         android:layout_marginLeft = "0dp"
         android:textSize="20sp"
-        android:background="@drawable/toolbarbuttonspic"/>
+        android:background="#BDBDBD"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,7 +31,7 @@
         android:text="  Statistics"
         android:textColor="#FAFAFA"
         android:textSize="20sp"
-        android:background="@drawable/toolbarbuttonspic"/>
+        android:background="#BDBDBD"/>
 
     <Button
         android:layout_width="match_parent"
@@ -41,7 +41,7 @@
         android:text="  GymList"
         android:textColor="#FAFAFA"
         android:textSize="20sp"
-        android:background="@drawable/toolbarbuttonspic"/>
+        android:background="#BDBDBD"/>
 
     <Button
         android:layout_width="match_parent"
@@ -51,7 +51,7 @@
         android:textColor="#FAFAFA"
         android:textSize="20sp"
         android:text="  train"
-        android:background="@drawable/toolbarbuttonspic"/>
+        android:background="#BDBDBD"/>
 
 
 
