--- a/IronUp/app/src/main/res/layout/all_statistic_layout.xml
+++ b/IronUp/app/src/main/res/layout/all_statistic_layout.xml
@@ -9,7 +9,8 @@
         style="@style/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Top MONSTERS" />
+        android:text="Top MONSTERS"
+        />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,12 +20,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginBottom="2dp"
+                android:background="#F5F5F5">
 
                 <ImageView
                     android:layout_width="60dp"
@@ -59,6 +63,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginBottom="2dp"
+                android:background="#F5F5F5"
                 android:paddingTop="6dp">
 
                 <ImageView
@@ -93,6 +99,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginBottom="2dp"
+                android:background="#F5F5F5"
                 android:paddingTop="6dp">
 
                 <ImageView
@@ -124,9 +132,12 @@
             </LinearLayout>
 
             <LinearLayout
+
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="6dp"
+                android:background="#F5F5F5"
                 android:layout_marginTop="6dp"
                 android:alpha="0.3"
                 android:orientation="horizontal"
@@ -165,6 +176,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:background="#F5F5F5"
                 android:paddingTop="10dp">
 
                 <ImageView
