--- a/IronUp/app/src/main/res/layout/exercises_list_layout.xml
+++ b/IronUp/app/src/main/res/layout/exercises_list_layout.xml
@@ -28,9 +28,9 @@
 
     <ScrollView
         android:id="@+id/scrollTrainingHistory"
+        android:layout_weight="8"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="7">
+        android:layout_height="0dp">
 
         <LinearLayout
             android:id="@+id/exercisesList"
