--- a/IronUp/app/src/main/res/layout/lefttoolbar.xml
+++ b/IronUp/app/src/main/res/layout/lefttoolbar.xml
@@ -21,7 +21,7 @@
         android:gravity="left|center"
         android:textColor="#FAFAFA"
         android:layout_marginLeft = "0dp"
-        android:textSize="20sp"
+        android:textSize="22sp"
         android:background="@drawable/toolbarbuttonspic"/>
     <Button
         android:layout_width="match_parent"
@@ -40,7 +40,7 @@
         android:id="@+id/gymListButtonID"
         android:text="  Gym list"
         android:textColor="#FAFAFA"
-        android:textSize="20sp"
+        android:textSize="22sp"
         android:background="@drawable/toolbarbuttonspic"/>
 
     <Button
@@ -49,8 +49,8 @@
         android:id="@+id/trainButtonID"
         android:gravity="left|center"
         android:textColor="#FAFAFA"
-        android:textSize="20sp"
-        android:text="  training"
+        android:textSize="22sp"
+        android:text="  Training"
         android:background="@drawable/toolbarbuttonspic"/>
 
 
